# spc2026-team4

./: .gitignore  .pre-commit-config.yaml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  chore.md  feat.md
.github/workflows/: backend.yml  frontend.yml  pr-check.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 53f7328270a5_add_seoul_sales.py  b49186160704_add_stores_table.py  f9eda7c46578_add_local_people.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/controllers/: analysis.py  chat.py  health.py  report.py
backend/app/core/: analysis_utils.py  category_map.py  config.py  database.py  geo.py  llm.py  masking.py  redis.py  seeder.py
backend/app/dto/: analysis.py  chat.py
backend/app/entities/: local_people.py  mv_local_people.py  sales.py  store.py
backend/app/services/: analysis.py  chat.py  chat_tools.py  market_data.py  rag_service.py  report.py  store.py  summarize.py
backend/routers/: chat.py
backend/scripts/: load_data.py  seed_chroma_documents.py  seed_local_people.py  seed_population_flow.py  seed_sales.py  seed_stores.py
backend/tests/: test_chat_context.py  test_chat_timeout.py  test_geohash.py
frontend/: .env.example  .gitattributes  .gitignore  .prettierrc  AGENTS.md  package-lock.json  package.json
frontend/.claude/: colors.md  layout.md
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/ui-test/: layout.tsx  page.tsx
frontend/src/components/: LeftPaneSpinner.tsx  theme-provider.tsx
frontend/src/components/agent/: AgentHeader.tsx  AgentMarkdown.tsx  AgentPanel.tsx  ChatInput.tsx  Disclaimer.tsx  MessageBubble.tsx  MessageThread.tsx  QuickStartButtons.tsx  ToolCallCard.tsx
frontend/src/components/chat/: ChatPanel.tsx  chat-panel.tsx
frontend/src/constants/: error-messages.ts  industry-icons.ts  map.ts  messages.ts
frontend/src/hooks/: use-analysis.ts  use-competitor-clusterer.ts  use-geolocation.ts  use-kakao-loader.ts  use-mock-analysis.ts  useAgentChat.ts
frontend/src/lib/: agent-event-bridge.ts  api-client.ts  contextParser.ts  geocode.ts  guardrail.ts  messageConverter.ts  proxy.ts  query-client.ts  radius-sync.ts  retry.ts  themes.ts  throttle.ts  toolResultParser.ts
frontend/src/mocks/: messages.ts
frontend/src/store/: analysisContext.tsx  analysisResult.tsx
frontend/src/styles/: colors.ts
frontend/src/types/: agent.ts  analysis.ts  api.ts  map.ts  message.ts
(+32 files in other folders)
