[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.1",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0",
]

[project.scripts]
dev = "main:start_dev"
start = "main:start_prod"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "--tb=short"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "main.py",
]
