[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.1",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
    "langgraph>=0.4.0",
    "openai>=2.43.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "asyncpg>=0.30.0",
    "geoalchemy2>=0.15.0",
    "redis[hiredis]>=5.0.0",
    "alembic>=1.13.0",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
    "greenlet>=3.5.2",
    "h3>=4.5.0",
    "pymupdf>=1.27.2.3",
    "olefile>=0.47",
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
dev = "app.main:start_dev"
start = "app.main:start_prod"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "--tb=short"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "app/",
]
